Added spectrogram, save & reset

--- a/example.conf
+++ b/example.conf
@@ -1,9 +1,11 @@
-[args]
-play=true
-volume=40
-noise=pink
-effects=true
-band-center=250
-tremolo-speed=1
-tremolo-depth=20
-extras=lowpass -1 120
+[sox-noise]
+play = True
+noise = pink
+volume = 100
+band_center = 250
+tremolo_speed = 1
+tremolo_depth = 20
+effects = true
+spectrogram = True
+extras = lowpass -1 120
+
