--- a/example.conf
+++ b/example.conf
@@ -5,7 +5,7 @@ volume = 100
 band_center = 250
 tremolo_speed = 1
 tremolo_depth = 20
-effects = true
+effects = True
 spectrogram = True
 extras = lowpass -1 120
 
